<resources>
    <string name="app_name">My Application</string>
    <string name="home_sign_in">SIGN IN</string>
    <string name="signUpBtnText">SIGN UP</string>
    <string name="netflixLogo">netflix logo on the sign up</string>
    <string name="TvHomePage"><![CDATA[Unlimited movies, TV shows & more]]></string>
    <string name="netflix_dark_name">logo</string>
    <string name="night_mode_switch">Night Mode</string>
    <string name="movie_name">movie_name</string>
    <string name="movie_category">category:to do</string>
    <string name="PlayBtnText">Play</string>
    <string name="movie_description">movie_description</string>
    <string name="title_activity_full_screen_movie">FullScreenMovieActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="recommended_movies">Recommended Movies</string>
    <string name="_10_secondsbtn">+10 seconds</string>
    <string name="minus10_secondsbtn">-10 seconds</string>
    <string name="back">back</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Log In</string>
    <string name="age_hint">Age</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="name_hint">Name</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="choose_profile_picture">Press here to choose your profile picture</string>
    <string name="membership_hint">Membership Type</string>
    <string name="baseUrl">\"http://10.0.2.2:8080/\"</string>
    <string name="Authorization">\"Authorization\"</string>
    <string name="select_category_prompt">Select the category of the movie</string>
</resources>