<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:padding="16dp">

  <!-- Back Button -->
  <ImageView
      android:id="@+id/backButton"
      android:layout_width="32dp"
      android:layout_height="32dp"
      android:contentDescription="@string/back"
      app:tint="?attr/backArrowColor"
      android:src="@drawable/ic_back"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_margin="16dp" />

  <!-- Netflix Logo -->
  <ImageView
      android:id="@+id/netflixLogo"
      android:layout_width="150dp"
      android:layout_height="60dp"
      android:layout_marginTop="100dp"
      android:layout_marginBottom="20dp"
      android:contentDescription="@string/netflixLogo"
      android:src="@drawable/netflix_logo"
      app:layout_constraintBottom_toTopOf="@+id/profilePictureFrame"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <FrameLayout
      android:id="@+id/profilePictureFrame"
      android:layout_width="120dp"
      android:layout_height="120dp"
      android:layout_marginTop="40dp"
      app:layout_constraintTop_toBottomOf="@id/netflixLogo"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

    <!-- Profile Picture -->
    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/circle_background"
        android:contentDescription="@string/profile_picture"
        android:scaleType="centerCrop" />

    <!-- Choose Profile Picture Text -->
    <TextView
        android:id="@+id/chooseProfileText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/choose_profile_picture"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:gravity="center"
        android:padding="8dp" />
  </FrameLayout>

  <!-- Sign-Up Form -->
  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/signUpFormContainer"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="40dp"
      android:layout_marginEnd="16dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/netflixLogo"
      app:layout_constraintVertical_bias="0.57">

    <!-- Name EditText -->
    <EditText
        android:id="@+id/nameEditText"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Email EditText -->
    <EditText
        android:id="@+id/emailEditText"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameEditText" />

    <!-- Password EditText -->
    <EditText
        android:id="@+id/passwordEditText"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEditText" />

    <!-- Age EditText -->
    <EditText
        android:id="@+id/ageEditText"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/age_hint"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText" />

    <!-- Sign Up Button -->
    <Button
        android:id="@+id/signUpButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#D50000"
        android:text="@string/sign_up_button_text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ageEditText" />
  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
