<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"

    tools:context=".MovieInfoActivity">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="212dp"
        tools:ignore="MissingConstraints">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/netflix_logo" />
    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="127dp"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <TextView
            android:id="@+id/movie_name"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:text="@string/movie_name"
            android:textSize="25sp"
            android:textColor="@color/text_color"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/category_name"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/movie_category"
            android:textColor="@color/text_color"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/video_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/text_color"
            android:text="@string/movie_description"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <Button
            android:id="@+id/playBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/playBtnInfo"
            android:textColor="@color/playBtnText"
            android:text="@string/PlayBtnText"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/recommended_movies"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lstRecommendedMovies"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>


</LinearLayout>