<?xml version="1.0" encoding="utf-8"?><!--<androidx.constraintlayout.widget.ConstraintLayout-->
<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:background="@color/background_color">-->


<!--    &lt;!&ndash; Movie Poster (Full Width) &ndash;&gt;-->
<!--    <ImageView-->
<!--        android:id="@+id/movieImage"-->
<!--        android:layout_width="418dp"-->
<!--        android:layout_height="372dp"-->
<!--        android:contentDescription="MoviePoster"-->
<!--        android:scaleType="centerCrop"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    &lt;!&ndash; Back Button &ndash;&gt;-->
<!--    <ImageView-->
<!--        android:id="@+id/backButton"-->
<!--        android:layout_width="40dp"-->
<!--        android:layout_height="40dp"-->
<!--        android:src="@drawable/ic_back"-->
<!--        android:contentDescription="@string/back"-->
<!--        android:padding="4dp"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        android:layout_margin="16dp"/>-->

<!--    &lt;!&ndash; Play Button Overlay &ndash;&gt;-->
<!--    <ImageView-->
<!--        android:id="@+id/playButton"-->
<!--        android:layout_width="80dp"-->
<!--        android:layout_height="80dp"-->
<!--        android:src="@drawable/ic_play_icon"-->
<!--        android:contentDescription="Play"-->
<!--        android:background="?attr/selectableItemBackgroundBorderless"-->
<!--        app:layout_constraintTop_toTopOf="@id/movieImage"-->
<!--        app:layout_constraintBottom_toBottomOf="@id/movieImage"-->
<!--        app:layout_constraintStart_toStartOf="@id/movieImage"-->
<!--        app:layout_constraintEnd_toEndOf="@id/movieImage"/>-->

<!--    &lt;!&ndash; Movie Title &ndash;&gt;-->
<!--    <TextView-->
<!--        android:id="@+id/movieTitle"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:textSize="22sp"-->
<!--        android:textColor="@color/text_color"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintTop_toBottomOf="@id/movieImage"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:layout_marginTop="16dp"/>-->

<!--    &lt;!&ndash; Movie Description &ndash;&gt;-->
<!--    <TextView-->
<!--        android:id="@+id/movieDescription"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:textSize="16sp"-->
<!--        android:textColor="@color/text_color"-->
<!--        app:layout_constraintTop_toBottomOf="@id/movieTitle"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:layout_margin="16dp"/>-->

<!--    &lt;!&ndash; Related Movies Label &ndash;&gt;-->

<!--    &lt;!&ndash; Horizontal RecyclerView for Related Movies &ndash;&gt;-->
<!--    <TextView-->
<!--        android:id="@+id/relatedMoviesLabel"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginTop="12dp"-->
<!--        android:text="Related Movies"-->
<!--        android:textColor="@color/text_color"-->
<!--        android:textSize="18sp"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/movieDescription" />-->

<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/relatedMoviesRecyclerView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="212dp"-->
<!--        android:orientation="horizontal"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="1.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/relatedMoviesLabel"-->
<!--        app:layout_constraintVertical_bias="1.0" />-->
<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".MovieDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="343dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/netflix_logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <TextView
            android:id="@+id/movie_name"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:text="@string/movie_name"
            android:textColor="@color/text_color"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/video_description"
            android:layout_width="match_parent"
            android:layout_height="111dp"
            android:text="@string/movie_description"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <Button
            android:id="@+id/playBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/playBtnInfo"
            android:text="@string/PlayBtnText"
            android:textColor="@color/playBtnText"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/recommended_movies"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lstRecommendedMovies"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</LinearLayout>
